# YQDevAssistant

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: default.json  schema.json
docs/: 00-项目分析报告.md  03-模块开发模板.md
scripts/: setup-dev.bat
src/: __init__.py
src/cli/: main.py
src/core/: config_manager.py  event_bus.py  exceptions.py  log_manager.py  module_base.py  module_manager.py
src/modules/backup/: __init__.py  __main__.py  backup_manager.py  module.py
src/modules/health/: __init__.py  __main__.py  checker.py  module.py  reporter.py
src/modules/new/: __init__.py  __main__.py  module.py  project_creator.py
src/modules/update/: __init__.py  __main__.py  module.py  version_checker.py
src/services/: filesystem_service.py  github_service.py  network_service.py  playwright_service.py
src/utils/: constants.py  formatters.py  shell.py  validators.py
tests/: conftest.py
tests/core/: test_config_manager.py  test_event_bus.py  test_module_base.py  test_module_manager.py
tests/modules/: test_backup.py  test_health.py  test_new.py  test_update.py
