[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yq-dev-assistant"
version = "0.1.0"
description = "YQ Dev Assistant — Personal Developer Workstation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "lt3045502989-dev", email = "lt3045502989@gmail.com"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "jsonschema>=4.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
]
gui = [
    "PySide6>=6.5",
]

[project.scripts]
yqa = "src.cli.main:cli"

[project.urls]
Homepage = "https://github.com/lt3045502989-dev/YQDevAssistant"
Repository = "https://github.com/lt3045502989-dev/YQDevAssistant.git"
Issues = "https://github.com/lt3045502989-dev/YQDevAssistant/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]

[tool.coverage.run]
source = ["src"]
omit = ["src/ui/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
